--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9,6 +9,7 @@
  */
 
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+
 article,
 aside,
 details,
@@ -265,7 +266,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: MuseoSans-500, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.428571429;
   color: #333333;
@@ -300,6 +301,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  padding-bottom: 10px;
 }
 .img-rounded {
   border-radius: 6px;
@@ -410,7 +412,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: MuseoSans-500,"Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
@@ -6073,6 +6075,9 @@ td.visible-print {
   padding:100px 20px;
   color:#ecf0f1;
 } 
+.header-wrapper{
+
+}
 .upload {
  /* border-style:solid 0px;
   border-bottom: solid 10px #333333;*/
@@ -6082,6 +6087,7 @@ td.visible-print {
   background-color:#333333;
   margin-top: 20px;
   color:#ecf0f1;
+
 }
 .uploadform a{
   color:#ecf0f1;
@@ -6096,9 +6102,13 @@ td.visible-print {
 }
 .section {
   padding:20px;
-  border-style:solid 0px;
+/*  border-style:solid 0px;
+  border-bottom: solid 10px #333333;*/
+}
+.section-wrapper{
+    border-style:solid 0px;
   border-bottom: solid 10px #333333;
-
+  background-color:#ecf0f1; 
 }
 .green-sea-flat-button {
   position: relative;
@@ -6117,9 +6127,20 @@ td.visible-print {
   -webkit-box-shadow: inset 0 -2px #14947b;
   box-shadow: inset 0 -2px #14947b;
 }
+.round-corners {
+  border-radius: 0.3em;
+}
 .green-sea-flat-button:active {
   top: 1px;
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  
+  border-bottom: 5px solid #16a085;
 }
