--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -709,8 +709,8 @@ pre code {
   clear: both;
 }
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+/*  margin-left: -15px;
+  margin-right: -15px;*/
 }
 .row:before,
 .row:after {
@@ -6086,6 +6086,7 @@ td.visible-print {
   background-color:#333333;
   margin-top: 20px;
   color:#ecf0f1;
+  padding-left: 15px;
 
 }
 .uploadform a{
@@ -6113,11 +6114,11 @@ td.visible-print {
   width:auto;
   height:40px;
   padding-left: 15px;
-/*  padding-bottom: 15px;*/
+  margin-bottom: 15px;
 }
 
 .content-container{
-  padding: 0 15px;
+/*  padding: 0 15px;*/
 }
 .round-corners {
   border-radius: 0.3em;
