styling + fix problem with adding to table + search for profile img. based on name or use male/female placeholder image

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6176,3 +6176,10 @@ height:400px;
 li {
 list-style-type: none;
 }
+
+.green {
+  background-color:#16a085;
+  color:#ecf0f1;
+  padding:5px;
+  margin:0px 15px 0px 15px;
+} 
